azurerm/day5-1vnet-1vm-ubuntu-managed-image/azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "type": "string",
      "defaultValue": "opsvNet",
      "metadata": {
        "description": "Name for the new VNet"
      }
    },
    "gatewaySubnetName": {
      "type": "string",
      "defaultValue": "GatewaySubnet",
      "metadata": {
        "description": "Name for gateway subnet in new VNet"
      },
      "allowedValues": [
        "GatewaySubnet"
      ]
    },
    "subnet1Name": {
      "type": "string",
      "defaultValue": "subnet-1-default",
      "metadata": {
        "description": "Name for VM Default subnet in the new VNet"
      }
    },
    "subnet2Name": {
      "type": "string",
      "defaultValue": "subnet-2",
      "metadata": {
        "description": "Name for VM 2nd subnet in the new VNet"
      }
    },
    "vnetPrefix": {
      "type": "string",
      "defaultValue": "172.22.0.0/20",
      "metadata": {
        "description": "CIDR block for VNet"
      }
    },
    "gatewaySubnetPrefix": {
      "type": "string",
      "defaultValue": "172.22.0.0/24",
      "metadata": {
        "description": "CIDR block for gateway subnet"
      }
    },
    "subnet1Prefix": {
      "type": "string",
      "defaultValue": "172.22.1.0/24",
      "metadata": {
        "description": "CIDR block for VM subnet-1"
      }
    },
    "subnet2Prefix": {
      "type": "string",
      "defaultValue": "172.22.2.0/24",
      "metadata": {
        "description": "CIDR block for VM subnet-2"
      }
    },
    "vmName": {
      "type": "string",
      "defaultValue": "lab"
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_DS2_v2"
    },
    "sshKeyData": {
      "type": "string",
      "metadata": {
        "description": "SSH rsa public key file as a string."
      }
    },
    "sshKeyPath": {
      "type": "string",
      "defaultValue": "[concat('/home/',parameters('adminUsername'),'/.ssh/authorized_keys')]"
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "vagrant",
      "metadata": {
        "description": "Administrator username for the Virtual Machine."
      }
    },
    "publicIPAddressType": {
      "type": "string",
      "defaultValue": "Dynamic"
    },
    "publicIPAddressName": {
      "type": "string",
      "defaultvalue": "[concat('pip', '-', parameters('vmName'), '-', take(uniqueString(parameters('vmName')), 4))]"
    },
    "nicName": {
      "type": "string",
      "defaultvalue": "[concat('nic', '-', parameters('vmName'), '-', take(uniqueString(parameters('vmName')), 4))]"
    },
    "osImageId": {
      "type": "string"
    }
  },
  "variables": {
    "location": "[resourceGroup().location]",
    "nsg1Name": "AllowSSH",
    "officeIPCidr": "210.216.0.0/16",
    "homeIPCidr": "1.228.0.0/16",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',parameters('vnetName'))]",
    "subnet1Ref": "[concat(variables('vnetID'),'/subnets/',parameters('subnet1Name'))]"
  },
  "resources": [
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[parameters('publicIPAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "[parameters('publicIPAddressType')]",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[parameters('nicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', parameters('publicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnet1Ref')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[variables('location')]",
      "comments": "Build a Virtual Network with /20 address space",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('gatewaySubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('gatewaySubnetPrefix')]"
            }
          },
          {
            "name": "[parameters('subnet1Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet1Prefix')]"
            }
          },
          {
            "name": "[parameters('subnet2Name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet2Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsg1Name')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "rule_allow_ssh_from_office",
            "properties": {
              "description": "Locks inbound down to ssh default port 22 from office",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[variables('officeIPCidr')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "rule_allow_ssh_from_home",
            "properties": {
              "description": "Locks inbound down to ssh default port 22 from home",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[variables('homeIPCidr')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('vmName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces/', parameters('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[parameters('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[parameters('sshKeyPath')]",
                  "keyData": "[parameters('sshKeyData')]"
                }
              ]
            }
          }
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[parameters('ubuntuOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "diskSizeGB": 512
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": false
          }
        }
      }
    }
  ],
  "outputs": {}
}
